--- a/slnAutentificacion/CuentasDiarias.Services.WebApi/appsettings.json
+++ b/slnAutentificacion/CuentasDiarias.Services.WebApi/appsettings.json
@@ -1,30 +1,30 @@
 {
-  "ConnectionStrings": {
-    //"CadenaConexion": "Server=tcp:srvdatabases.database.windows.net,1433;Initial Catalog=dbpresupuesto;Persist Security Info=False;User ID=usradmin;Password=09Mayo84;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-    "CadenaConexion": "Server=localhost,1433;Initial Catalog=dbCuentas;Persist Security Info=False;User ID=sa;Password=183377;Connection Timeout=30;"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        //"CadenaConexion": "Server=tcp:srvdatabases.database.windows.net,1433;Initial Catalog=dbpresupuesto;Persist Security Info=False;User ID=usradmin;Password=09Mayo84;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+        "CadenaConexion": "Server=localhost,1433;Initial Catalog=db_Lab2024;Persist Security Info=False;User ID=sa;Password=09mayo84;Connection Timeout=30;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*;localhost;127.0.0.1  ",
+    "Config": {
+        "OriginCors": "http://localhost:5245/",
+        "Secret": "_(123456787)@___zzz???!3",
+        "Issuer": "pruebaToken", //Emisor
+        "Audience": "cuentasdiariastest" //para quien va
+    },
+    "HealthCheckUI": {
+        "HealthChecks": [
+            {
+                "Name": "Check System API",
+                "Uri": "/healthcheck"
+            }
+        ],
+        "Webhooks": [],
+        "EvaluationTimeOnSeconds": 10,
+        "MinimumSecondsBetweenFailureNotifications": 60
     }
-  },
-  "AllowedHosts": "*;localhost;127.0.0.1  ",
-  "Config": {
-    "OriginCors": "http://localhost:5245/",
-    "Secret": "_(123456787)@___zzz???!3",
-    "Issuer": "pruebaToken", //Emisor
-    "Audience": "cuentasdiariastest" //para quien va
-  },
-  "HealthCheckUI": {
-    "HealthChecks": [
-      {
-        "Name": "Check System API",
-        "Uri": "/healthcheck"
-      }
-    ],
-    "Webhooks": [],
-    "EvaluationTimeOnSeconds": 10,
-    "MinimumSecondsBetweenFailureNotifications": 60
-  }
 }
